# modern-python-template

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_en.md  SECURITY.md  init_project.py  mkdocs.yml  pyproject.toml
.github/: codecov.yml  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  pr-labeler.yml  publish.yml  release-drafter.yml  semantic-pr.yml  stale.yml
docs/: index.md  reference.md
src/my_package/: main.py
tests/: test_smoke.py
