[project]
name = "python-template"                                                # TODO: Start a new project -> Modify this
version = "0.1.0"
description = "A template for modern Python projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Algieba-dean", email = "algieba.king@gmail.com" }]
license = "MIT"

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_package"] # TODO: Modify this when renaming folder

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.1",
    "mypy>=1.18.2",
]

[project.optional-dependencies]
# documentation
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

# ============================================================
# Pytest Configuration
# ============================================================
[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing:skip-covered --cov-report=html"

# ============================================================
# Coverage Configuration
# ============================================================
[tool.coverage.run]
omit = ["*/__init__.py", "tests/*"]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]

# ============================================================
# Mypy Configuration
# ============================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================
# Ruff Configuration (Linter & Formatter)
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "PT", "SIM", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["my_package"] # TODO: Modify this

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
